<resources>
    <string name="filter_view_app_riderz">HTTP Intent Filter</string>
    <string name="app_name">Riderz</string>
    <string name="title_activity_main">Riderz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="quote">Move Along</string>
    <string name="bottomnav_title_0">Home</string>
    <string name="bottomnav_title_1">Map</string>
    <string name="bottomnav_title_2">Schedule</string>
    <string name="bottomnav_title_3">Favorites</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_schedule">BART Trip</string>
    <string name="navigation_drawer_stations">BART Station Info</string>
    <string name="navigation_drawer_favorites">Favorites</string>
    <string name="navigation_drawer_bart_map">Google Map</string>
    <string name="navigation_drawer_phoneLines">Call Lines</string>
    <string name="navigation_drawer_misc">Misc</string>
    <string name="navigation_drawer_about">About</string>
    <string name="about_textView">Copyright RJS. All Rights Reserved.</string>
    <string name="logo_description">Application Logo</string>
    <string name="help_view_title">FAQ</string>
    <string name="bart_map_button">Train Lines Map</string>
    <string name="bart_lines_map_description">An image of the BART Train Lines</string>
    <string name="bart_result_depart">Depart:</string>
    <string name="bart_result_arrive">Arrive:</string>
    <string name="bart_result_tripTime">Travel Time (minutes):</string>
    <string name="bart_result_departTime">Departure Time:</string>
    <string name="bart_result_arriveTime">Arrival Time:</string>
    <string name="bart_result_cashFare">Cash Fare: </string>
    <string name="bart_result_clipperFare">Clipper Fare:</string>
    <string name="bart_result_transfer_cd">Train Transfer Icon</string>
    <string name="action_favorites">Favorites</string>
    <string name="bart_favorites_empty">You currently don\'t have any favorite routes.</string>
    <string name="favorite_origin">Origin</string>
    <string name="favorite_destination">Destination</string>
    <string name="contentDesc_arrow">Arrow pointing right</string>
    <string name="contentDesc_search">Search Button</string>
    <string name="contentDesc_options">Options Button</string>
    <string name="favorite_search">Search</string>
    <string name="favorite_options">Options</string>
    <string name="action_delete">Delete</string>
    <string name="deletion_success">Successfully Deleted</string>
    <string name="favorite_added">Added to Favorites!</string>
    <string name="favorite_deleted">Favorite successfully removed.</string>
    <string name="help_report_button">Report an Issue</string>
    <string name="help_intent_title">Send Email</string>
    <string name="help_intent_text">Please input your message here.</string>
    <string name="help_title">Help</string>
    <string name="home_alerts">Welcome, fellow Rider!</string>
    <string name="banner">Artwork of San Francisco. By Rachelle Miller. All rights reserved.</string>
    <string name="phonesLines_lostFound">Lost and Found:</string>
    <string name="phonesLines_bartComplaints">Comments and Complaints:</string>
    <string name="phoneLines_bartPolice">Police:</string>
    <string name="phoneLines_bartLink">For a complete list of BART phone lines, please click the link below.</string>
    <string name="phoneLines_title">BART</string>
    <string name="phoneLines_911">For Emergencies, Please Dial 911</string>
    <string name="phoneLines_police_number">877–679–7000</string>
    <string name="phoneLines_bartComplaints_number">510–464–7134</string>
    <string name="phoneLines_bartLostFound_number">510–464–7090</string>
    <string name="phoneLines_bartWebsite">https://bart.gov/siteinfo/contact</string>
    <string-array name="police_crime_types">
        <item></item>
        <item>Crime in Progress</item>
        <item>Violent or Disruptive Behavior</item>
        <item>Illicit Drugs</item>
        <item>Robbery or Theft</item>
        <item>Sexual Assault or Lewd Behavior</item>
        <item>Vandalism</item>
        <item>Aggressive Panhandling</item>
        <item>Suspicious Activity</item>
        <item>Other</item>
    </string-array>
    <string-array name="stations_list">
        
        <item></item>
        <item>12th St. Oakland City Center</item>
        <item>16th St. Mission</item>
        <item>19th St. Oakland</item>
        <item>24th St. Mission</item>
        <item>Antioch</item>
        <item>Ashby</item>
        <item>Balboa Park</item>
        <item>Bay Fair</item>
        <item>Castro Valley</item>
        <item>Civic Center/UN Plaza</item>
        <item>Coliseum</item>
        <item>Colma</item>
        <item>Concord</item>
        <item>Daly City</item>
        <item>Downtown Berkeley</item>
        <item>Dublin/Pleasanton</item>
        <item>El Cerrito del Norte</item>
        <item>El Cerrito Plaza</item>
        <item>Embarcadero</item>
        <item>Fremont</item>
        <item>Fruitvale</item>
        <item>Glen Park</item>
        <item>Hayward</item>
        <item>Lafayette</item>
        <item>Lake Merritt</item>
        <item>MacArthur</item>
        <item>Millbrae</item>
        <item>Montgomery St.</item>
        <item>North Berkeley</item>
        <item>North Concord/Martinez</item>
        <item>Oakland International Airport</item>
        <item>Orinda</item>
        <item>Pittsburg/Bay Point</item>
        <item>Pittsburg Center</item>
        <item>Pleasant Hill/Contra Costa Centre</item>
        <item>Powell St.</item>
        <item>Richmond</item>
        <item>Rockridge</item>
        <item>San Bruno</item>
        <item>San Francisco International Airport</item>
        <item>San Leandro</item>
        <item>South Hayward</item>
        <item>South San Francisco</item>
        <item>Union City</item>
        <item>Walnut Creek</item>
        <item>Warm Springs/South Fremont</item>
        <item>West Dublin/Pleasanton</item>
        <item>West Oakland</item>
    </string-array>
    <string name="stations_title">Stations Directory</string>
    <string name="station_info_title">Info</string>
    <string name="stationInfo_oops">Oops!</string>
    <string name="stationInfo_error">Sorry, but there was a network error. Please go back and try again.</string>
    <string name="stationInfo_attractionTitle">Attractions</string>
    <string name="stationInfo_foodTitle">Food</string>
    <string name="stationInfo_shoppingTitle">Shopping</string>
    <string name="stationInfo_map_button">Map</string>
    <string name="stationInfo_stationName">Station Name</string>
    <string name="stationInfo_stationAddress">Address</string>
    <string name="stationInfo_stationCity">City</string>
    <string name="stationInfo_station_crossStreet">Cross Street</string>
    <string name="stationInfo_stationLink">Link</string>
    <string name="stationInfo_stationIntro">Intro</string>
    <string name="stationInfo_stationAttraction">Attractions</string>
    <string name="stationInfo_stationShopping">Shopping</string>
    <string name="stationInfo_stationFood">Food</string>
    <string name="departure_station">Departing Station</string>
    <string name="arrival_station">Arriving Station</string>
    <string name="schedule_button">Search</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="time_title">Select Time</string>
    <string name="last_update">Last update at</string>
    <string name="currentDate">Today</string>
    <string name="currentTime">Now</string>
    <string name="etd_timeImage_description">Time</string>
    <string name="error_field_incomplete">This field cannot be blank.</string>
    <string name="error_form_completion">Please input all fields</string>
    <string name="error_form_completion2">You\'re going nowhere! Please try again.</string>
    <string name="error_try_again">Sorry! Something went wrong. Please try again.</string>
    <string name="error_station_not_found">The station you selected was not found. Please try again.</string>
    <string name="preference_category_time_title">Time Setting</string>
    <string name="preference_time_title">24 Hour Format</string>
    <string name="preference_time_summary">View time in 12 or 24 hour format</string>
    <string name="preference_time_key">TIME_KEY</string>
    <string name="preference_category_metric_title">Measurement System</string>
    <string name="preference_metric_title">Enable Metric System?</string>
    <string name="preference_metric_summary">Default is Imperial</string>
    <string name="preference_metric_key">METRIC_KEY</string>
    <string name="help_q1">Q: Will there be features added in the future?</string>
    <string name="help_a1">A: Contact us about feature requests!</string>
    <string name="help_q2">Q: Will this app be on iOS soon?</string>
    <string name="help_a2">A: Unfortunately not at the moment, but it will be considered if demand is high enough.</string>
    <string name="help_q3">Q: Is this app open source?</string>
    <string name="help_a3">A: Yes! This is a non-profit, open source app. Developers can go to this link below for more information.</string>
    <string name="help_url">https://github.com/rjsuzuki/transit-app</string>
    <string name="help_q4">Q: What if I found a problem?</string>
    <string name="help_a4">A: If you have found an application problem that you would like to report, please click the button just below and send us an email :)</string>
    <string name="trip_warning">Please be aware that BART schedules and real time estimates may differ. Accuracy relies on BART\'s system and therefore may not always be exact.
    As a precaution, we encourage you to get to the platform at least a few minutes ahead of schedule. \n We apologize in advanced if this causes any inconveniences.</string>
    <string name="action_deletePriority">Remove Priority</string>
    <string name="favorite_setPriority">Set as Priority</string>
    <string name="priority_set">Set as a priority</string>
    <string name="priority_deleted">Removed as a priority</string>
    <string name="real_time_estimates">Real Time Estimates</string>
    <string name="now">now</string>
    <string name="minutes">min</string>
    <string name="root_title">Settings</string>
    <string name="gps_permission_alert">Location services is not enabled. Do you want to turn it on?</string>
    <string name="googlemap_dialog_prompt">If the station shown below is not convenient, please choose a new station from the dropdown menu and then press continue.</string>
    <string name="googleMap_dialog_title">Please confirm the trip schedule.</string>
    <string name="favorite_reverse">Reverse</string>
    <string name="create_favorite">Create Favorite</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_trip">Trip</string>
    <string name="menu_map">Map</string>
    <string name="menu_home">Home</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_go">Go</string>
    <string name="alert_dialog_confirmation">Are you sure you want to remove this favorite?</string>
    <string name="preference_category_theme_title">Theme Settings</string>
    <string name="preference_location_key">LOCATION_KEY</string>
    <string name="preference_theme_key">THEME_KEY</string>
    <string name="preference_location_title">Use your location?</string>
    <string name="preference_location_summary">Weather and train information will provide a better experience with your location enabled.</string>
    <string name="preference_theme_title">Manage the color behavior of the app.</string>
</resources>