<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_theme_title">
        <Preference
            android:key="@string/preference_theme_key"
            android:title="@string/preference_theme_title"
            android:icon="@drawable/ic_invert_colors_24"
            android:summary="Weather and train information will provide a better experience with your location enabled." />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_time_title">
        <CheckBoxPreference
            android:key="@string/preference_time_key"
            android:title="@string/preference_time_title"
            android:summary="@string/preference_time_summary"
            android:icon="@drawable/ic_menu_schedule"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_metric_title">
        <CheckBoxPreference
            android:key="@string/preference_metric_key"
            android:title="@string/preference_metric_title"
            android:icon="@drawable/ic_weather_celcius"
            android:summary="@string/preference_metric_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Location Settings">
        <Preference
            android:key="@string/preference_location_key"
            android:title="@string/preference_location_title"
            android:icon="@drawable/ic_location_24"
            android:summary="@string/preference_location_summary" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            android:key="RESET_KEY"
            android:title="Reset to Default Settings"
            android:icon="@drawable/ic_refresh_black_24dp" />
    </PreferenceCategory>
</PreferenceScreen>