<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/navigation_drawer_home" />
        <item
            android:id="@+id/googleMapFragment"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/navigation_drawer_bart_map" />
        <item
            android:id="@+id/tripFragment"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/navigation_drawer_schedule" />
        <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/navigation_drawer_favorites" />
    </group>

    <item android:title="@string/navigation_drawer_misc">
        <menu>
            <item
                android:id="@+id/stationsFragment"
                android:icon="@drawable/ic_menu_station"
                android:title="@string/navigation_drawer_stations" />
            <item
                android:id="@+id/phoneLinesFragment"
                android:icon="@drawable/ic_menu_phone"
                android:title="@string/navigation_drawer_phoneLines"
                />
            <item
                android:id="@+id/helpFragment"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/navigation_drawer_help" />
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/navigation_drawer_about" />
        </menu>
    </item>

</menu>
