<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp">

    <android.support.v7.widget.CardView
        android:id="@+id/help_cardView"
        style="@style/CardViewRiderz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp"
            android:background="@color/mp_primary_light">

            <TextView
                style="@style/TextViewRiderz"
                android:id="@+id/help_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_view_title"
                android:textAlignment="center"
                android:textColor="@color/mp_primary_text"/>

            <TextView
                style="@style/TextViewRiderz"
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_q1" />

            <TextView
                style="@style/TextViewRiderz"
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_a1" />

            <TextView
                style="@style/TextViewRiderz"
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_q2" />

            <TextView
                style="@style/TextViewRiderz"
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_a2" />

            <TextView
                style="@style/TextViewRiderz"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_q3" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextViewRiderz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_a3" />

            <TextView
                android:id="@+id/textView11"
                style="@style/TextViewRiderz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/help_url" />


            <TextView
                style="@style/TextViewRiderz"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_q4" />

            <TextView
                style="@style/TextViewRiderz"
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_a4" />

            <Button
                android:id="@+id/help_report_button"
                style="@style/ButtonAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/help_report_button" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>