<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/navigation_drawer_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/navigation_drawer_schedule" />
        <item
            android:id="@+id/nav_station"
            android:icon="@drawable/ic_menu_station"
            android:title="@string/navigation_drawer_stations" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/navigation_drawer_bart_map" />
    </group>

    <item android:title="@string/navigation_drawer_help">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
